Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18889

Long unique on virtual fields crashes server

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.4.4
    • Server
    • None
    • All

    Description

      create table t2(a blob , b blob as (a), unique(b))engine=innodb;
      insert into t2 values(1, default);
      --error ER_DUP_ENTRY
      insert into t2 values(1, default);
      
      

      Thread pointer: 0x7fce60000d60                                                                                                                                 
      Attempting backtrace. You can use the following information to find out                                                                                        
      where mysqld died. If you see no messages after this, something went                                                                                           
      terribly wrong...                                                                                                                                              
      stack_bottom = 0x7fceb271edd0 thread_stack 0x49000                                                                                                             
      /home/sachin/server/sql/mysqld(my_print_stacktrace+0x40)[0x55e208237518]                                                                                       
      mysys/stacktrace.c:269(my_print_stacktrace)[0x55e207a7d8b0]                                                                                                    
      sigaction.c:0(__restore_rt)[0x7fcebe6c73c0]
      :0(__memcmp_avx2_movbe)[0x7fcebd829e83]
      /home/sachin/server/sql/mysqld(+0x12a1020)[0x55e208261020]
      strings/ctype-bin.c:85(my_strnncoll_binary)[0x55e2082610a3]
      strings/ctype-bin.c:125(my_strnncollsp_binary)[0x55e207a608ab]
      sql/field.cc:8400(Field_blob::cmp(unsigned char const*, unsigned int, unsigned char const*, unsigned int))[0x55e207a6095e]
      sql/field.cc:8412(Field_blob::cmp_max(unsigned char const*, unsigned char const*, unsigned int))[0x55e207a70a63]
      sql/field.h:3900(Field_blob::cmp(unsigned char const*, unsigned char const*))[0x55e207a6c3f6]
      sql/field.h:1087(Field::cmp_offset(long long))[0x55e207a916ed]
      sql/handler.cc:6571(check_duplicate_long_entry_key(TABLE*, handler*, unsigned char*, unsigned int))[0x55e207a91ab2]
      sql/handler.cc:6620(check_duplicate_long_entries(TABLE*, handler*, unsigned char*))[0x55e207a91dac]
      sql/handler.cc:6699(handler::ha_write_row(unsigned char*))[0x55e2076fd7eb]
      sql/sql_insert.cc:2021(write_record(THD*, TABLE*, st_copy_info*))[0x55e2076fabd5]
      sql/sql_insert.cc:1067(mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool))[0x55e207746224]
      sql/sql_parse.cc:4767(mysql_execute_command(THD*))[0x55e207752286]
      sql/sql_parse.cc:8137(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55e20773d8a0]
      sql/sql_parse.cc:1828(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55e20773c065]
      sql/sql_parse.cc:1357(do_command(THD*))[0x55e2078b2bc8]
      sql/sql_connect.cc:1399(do_handle_one_connection(CONNECT*))[0x55e2078b292c]
      sql/sql_connect.cc:1303(handle_one_connection)[0x55e2081cf2e8]
      pthread_create.c:0(start_thread)[0x7fcebe6bca9d]
      :0(__GI___clone)[0x7fcebd7c9b23]
      
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              sachin.setiya.007 Sachin Setiya (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: