MDEV-18889 Long unique on virtual fields crashes server

When we receive record from ha_index_read_map it does not have vfield
values. So we need to update it.